[gd_scene load_steps=4 format=3 uid="uid://cd02qtpq2ias"]

[ext_resource type="Script" path="res://UI/tutorial.gd" id="1_brmu1"]
[ext_resource type="Shader" path="res://Shader/blinking.gdshader" id="2_2b4i5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ivt3e"]
shader = ExtResource("2_2b4i5")
shader_parameter/cutout = 0.2
shader_parameter/inner_fill = 0.15
shader_parameter/blink_speed = 2.0

[node name="Tutorial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_brmu1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="Objective" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 64
text = "Survive
as long as you can!

Good Luck."
horizontal_alignment = 1
vertical_alignment = 1

[node name="ControlTip" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
theme_override_font_sizes/font_size = 45
text = "TIP:
There is an additional
control type: Follow

 You can change
to it in settings!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 100

[node name="LeftTutorial" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer/LeftTutorial"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 32
text = "Press here 
to move the rocket
to the Left"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LeftCircle" type="ColorRect" parent="VBoxContainer/HBoxContainer/MarginContainer/LeftTutorial"]
material = SubResource("ShaderMaterial_ivt3e")
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(1, 1, 1, 0.584314)

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 100

[node name="RightTutorial" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 40
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer2/RightTutorial"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 32
text = "Press here 
to move the rocket
to the Right"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightCircle" type="ColorRect" parent="VBoxContainer/HBoxContainer/MarginContainer2/RightTutorial"]
material = SubResource("ShaderMaterial_ivt3e")
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(1, 1, 1, 0.584314)
